--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/* Здесь есть пустые селекторы, я их сразу указал, т.к. в дальнейшем они скорее всего понадобятся. Если что-то останется пустым на момент окончания верстки, то конечно это удалю */
-
 /* Variables */
 
 :root {
@@ -44,10 +42,10 @@
   --transparent-basic-greylight: rgba(197,197,197,.3);
   --transparent-extra-greylight: rgba(169,169,169,.3);
   
-  --input-hover-disable: #b5b5b5; /* нужно больше оттенков серого */
+  --input-hover-disable: #b5b5b5;
 
   --footer-text:  #f1f5f7;
-  --icon-hover: #3d546f; /* Этот цвет по макету больше нигде не встречается. Я бы заменил его на один из серо-синих, по общей логике */
+  --icon-hover: #3d546f;
 }
 
 /* 
@@ -55,10 +53,12 @@
   Global
 ===========
 */
+
+*, *::before, *::after { 
+  box-sizing: border-box; 
+}
   
 body {
-  min-width: 940px;
-  padding: 0;
   font-family: var(--main-font);
   font-size: 13px;
   line-height: 24px;
@@ -75,10 +75,6 @@ img {
   height: auto;
 }
 
-*, *::before, *::after { 
-  box-sizing: border-box; 
-}
-
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -91,8 +87,9 @@ img {
   clip-path: inset(100%);
 }
 
-.tough-wrapper {
-  width: 940px;
+.wrapper {
+  width: 960px;
+  padding: 0 10px;
   margin: 0 auto;
 }
 
@@ -122,12 +119,12 @@ img {
   list-style: none;
 }
 
-.stylized-list li {
+.stylized-list-item {
   position: relative;
   padding-left: 35px;
 }
 
-.stylized-list li::before {
+.stylized-list-item::before {
   content: '';
   position: absolute;
   width: 25px;
@@ -137,7 +134,6 @@ img {
   transform: translateY(-50%);
   background-color: var(--basic-red);
 }
-
 
 /* 
 ===========
@@ -150,20 +146,10 @@ img {
   background-color: var(--bg-greycool);
 }
 
-.site-header ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
 .header-topbar {
   background-color: var(--dark-greyblue);
   font-size: 18px;
   line-height: 24px;
-}
-
-.header-topbar a {
-  color: var(--basic-white);
 }
 
 .site-logo {
@@ -197,22 +183,25 @@ img {
 }
 
 .shop-menu-list {
-
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.shop-menu-item a,
-.header-make-order {
-  width: 150px;
-  text-align: center;
-  display: inline-block;
-}
-
-.shop-menu-item a:active {
+.shop-menu-item:active {
   background-color: var(--extradark-greyblue);
+}
+
+.shop-menu-link {
+  color: var(--basic-white);
+}
+
+.shop-menu-link:active {
   opacity: .5;
 }
 
 .header-make-order {
+  color: var(--basic-white);
   background-color: var(--basic-green);
 }
 
@@ -221,8 +210,8 @@ img {
 }
 
 .header-make-order:active {
-  background-color: var(--basic-green);
   color: var(--basic-white-active); 
+  background-color: var(--basic-green);
 }
 
 .header-site-descript {
@@ -238,40 +227,36 @@ img {
   font-weight: bold;
   color: var(--basic-red);
   border: 3px solid var(--basic-white);
-  text-align: center;
 }
 
 .header-address {
   font-size: 14px;
   line-height: 24px;
-  text-align: center;
   color: var(--basic-greyblue);
 }
 
 .user-menu {
   font-size: 21px;
   line-height: 21px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .user-menu-item {
   background-color: var(--basic-white);
-  text-align: center;
 }
 
-.user-menu-item a {
+.user-menu-link {
   color: var(--basic-black);
 }
 
-.user-menu-item a:hover {
+.user-menu-link:hover {
   color: var(--basic-red);
 }
 
-.user-menu-item a:active {
+.user-menu-link:active {
   color: var(--basic-greylight);
-}
-
-.user-menu-item.login {
-  
 }
 
 .site-navigation {
@@ -281,28 +266,24 @@ img {
   background-color: var(--basic-greyblue);
 }
 
-.main-menu {
-  
+.main-menu {  
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.main-menu-item {
-  
-}
-
-.main-menu-item a {  
-  display: block;
-  color: var(--basic-white);  
-}
-
-.main-menu-item a:hover {  
+.main-menu-item:hover {  
   background-color: var(--dark-greyblue);
 }
 
-.main-menu-item a:active {  
+.main-menu-link { 
+  color: var(--basic-white);  
+}
+
+.main-menu-link:active {  
   background-color: var(--extradark-greyblue);
   color: var(--basic-white-active);  
 }
-
 
 /* 
 ===========
@@ -314,57 +295,55 @@ img {
   font-family: var(--secondary-font);
 }
 
-.site-footer ul,
-.site-footer p {
-  margin: 0;
-  padding: 0;
-}
-
-.site-footer ul {
-  list-style: none;
-}
-
 .footer-upper {
-  background-color: var(--basic-greyblue);
   font-size: 18px;
   color: var(--footer-text);
-}
-
-.footer-logo {
-
+  background-color: var(--basic-greyblue);
 }
 
 .footer-address {
-  font-style: normal;
+  font-style: normal;  
+  margin: 0;
 }
 
 .footer-phone {
   color: var(--footer-text);
 }
 
-.footer-site-nav {
-
+.footer-site-nav {  
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.footer-site-nav a {
+.footer-site-nav-link {
   color: var(--footer-text);
 }
 
-.footer-product-nav {
-
-}
-
-.footer-product-nav a {
-  color: var(--extra-yellowlight);
-}
-
-.footer-site-nav a:hover,
-.footer-product-nav a:hover {
+.footer-site-nav-link:hover {
   text-decoration: underline;
 }
 
-.footer-site-nav a:active,
-.footer-product-nav a:active {
+.footer-site-nav-link:active {
+  opacity: .5;
+  text-decoration: none; 
+}
+
+.footer-product-nav {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-product-nav-link {
+  color: var(--extra-yellowlight);
+}
+
+.footer-product-nav-link:hover {
+  text-decoration: underline;
+}
+
+.footer-product-nav-link:active {
   opacity: .5;
   text-decoration: none;
 }
@@ -375,15 +354,33 @@ img {
   color: var(--basic-white);
 }
 
-.footer-trim a {
+.copyright {
+  margin: 0;
+}
+
+.reply {
+  margin: 0;
+}
+
+.designed {
+  margin: 0;
+}
+
+.footer-socials {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-trim-link{
   color: var(--extra-yellowlight);
 }
 
-.footer-trim a:hover {
+.footer-trim-link:hover {
   text-decoration: underline;
 }
 
-.footer-trim a:active {
+.footer-trim-link:active {
   color: var(--basic-red);
   text-decoration: none;
 }
@@ -394,19 +391,11 @@ img {
 ===========
 */
 
-.page-content-wrap {
-
-}
-
-.page-section {
-
-}
-
 .page-section.grey-bg {
   background-color: var(--bg-greycool);
 }
 
-.page-section-header {
+.page-section-title {
   font-family: var(--secondary-font);
   font-size: 30px;
   line-height: 30px;
@@ -415,28 +404,20 @@ img {
   color: var(--basic-black);
 }
 
-.page-section p {
-
-}
-
 /* Index Promo Block */
-
-.promo-menu {
-
-}
 
 .promo-menu-item {
   font-family: var(--secondary-font);
 }
 
-.promo-menu-item h3 {
+.promo-menu-item-title {
   font-size: 24px;
   line-height: 30px;
   font-weight: bold;
   color: var(--basic-white);
 }
 
-.promo-menu-item a {
+.promo-menu-item-link {
   font-size: 14px;
   line-height: 18px;
   text-align: center;
@@ -445,11 +426,11 @@ img {
   background-color: var(--transparent-white);
 }
 
-.promo-menu-item a:hover {
+.promo-menu-item-link:hover {
   background-color: var(--transparent-basic-greylight);
 }
 
-.promo-menu-item a:active {
+.promo-menu-item-link:active {
   background-color: var(--transparent-extra-greylight);
 }
 
@@ -473,37 +454,25 @@ img {
   font-family: var(--secondary-font);
 }
 
-.promo-slider-list {
-  
-}
-
 .promo-slider-item {
   color: var(--basic-white);
-}
-
-.promo-slider-item.active {
-  
 }
 
 .promo-slider-text-wrap {
   background-color: var(--transparent-black);
 }
 
-.promo-slider-item h3 {
+.promo-slider-title {
   font-size: 36px;
   line-height: 36px;
   text-transform: uppercase;
   margin: 0;
 }
 
-.promo-slider-item p {
+.promo-slider-tagline {
   font-size: 18px;
   line-height: 24px;
   margin: 0;
-}
-
-.promo-slider-item a {
-
 }
 
 /* Index Catalog Section */
@@ -527,24 +496,13 @@ img {
   padding: 0;
 }
 
-.index-catalog-list.brands {
-
-}
-
-.product-card,
-.brand-card {  
+.product-card {  
   font-family: var(--main-font);
   border: 1px solid var(--border-product-card);
 }
 
-.product-card:hover,
-.brand-card:hover { 
+.product-card:hover { 
   box-shadow: 0px 4px 20px var(--shadow-product-card);
-}
-
-.product-card img,
-.brand-card img {  
-  vertical-align: top;
 }
 
 .product-card-buttons {  
@@ -586,9 +544,8 @@ img {
   opacity: .5;
 }
 
-.product-card-thumb,
-.brand-card-thumb {
-  display: inline-block;
+.product-card-thumb {
+  display: block;
 }
 
 .product-card-title {
@@ -616,17 +573,27 @@ img {
   background-color: var(--basic-red);
 }
 
+.brand-card {  
+  font-family: var(--main-font);
+  border: 1px solid var(--border-product-card);
+}
+
+.brand-card:hover { 
+  box-shadow: 0px 4px 20px var(--shadow-product-card);
+}
+
 .brand-card:active {
   opacity: .5;
 }
 
-/* Index Services Slider */
-
-.services-tabs {
-  
+.brand-card-thumb {
+  display: block;
 }
 
+/* Index Services Slider */
+
 .tabs-nav {
+  width: 240px;
   font-family: var(--secondary-font);
   font-weight: bold;
   font-size: 21px;
@@ -637,13 +604,18 @@ img {
 }
 
 .tabs-nav-item {
-  width: 240px;
   background-color: var(--basic-greyblue);
 }
 
 .tabs-nav-item.active {
   background-color: var(--basic-white);
 }
+
+.tabs-nav-item:hover {
+  background-color: var(--dark-greyblue);
+}
+
+/* В этом месте если повесить на ссылку селектор и обращаться к ней через селектор конструкция не работает, т.к. класс .active перебивает обращение по селектору, только напрямую через тег <а> работает. По крайней мере у меня другого рабочего решения не получилось */
 
 .tabs-nav-item a {
   display: block;
@@ -656,15 +628,9 @@ img {
 
 .tabs-nav-item a:hover {
   color: var(--basic-white);
-  background-color: var(--dark-greyblue);
 }
 
-
-.tabs-content {
-
-}
-
-.tabs-content h3 {
+.tab-item-title {
   font-family: var(--secondary-font);
   font-weight: normal;
   font-size: 30px;
@@ -672,8 +638,4 @@ img {
   text-transform: uppercase;
   color: var(--basic-greyblue);
   margin: 0;
-}
-
-.tab-item {
-  
 }
