--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,7 @@ img {
   line-height: 23px;
   font-style: italic;
   color: var(--basic-red);
+  font-weight: 400;
 }
 
 .header-phone {
@@ -256,6 +257,40 @@ img {
 }
 
 .user-menu-link:active {
+  color: var(--basic-greylight);
+}
+
+.user-logged-block {
+  font-size: 21px;
+  line-height: 21px;
+  background-color: var(--basic-white);
+}
+
+.user-logged-name {
+  color: var(--basic-black);
+}
+
+.user-logged-name:active {
+  color: var(--basic-greylight);
+}
+
+.user-logged-menu {
+  font-size: 16px;
+  line-height: 18px;
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.user-logged-menu-link {
+  color: var(--basic-greyblue);
+}
+
+.user-logged-menu-link:hover {
+  color: var(--basic-red);
+}
+
+.user-logged-menu-link:active {
   color: var(--basic-greylight);
 }
 
@@ -404,6 +439,19 @@ img {
   color: var(--basic-black);
 }
 
+.breadcrumbs {
+  font-size: 13px;
+  line-height: 18px;
+  text-transform: uppercase;
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.breadcrumbs-link {
+  color: var(--basic-black);
+}
+
 /* Index Promo Block */
 
 .promo-menu-item {
@@ -495,6 +543,8 @@ img {
   margin: 0;
   padding: 0;
 }
+
+/* Catalog Card */
 
 .product-card {  
   font-family: var(--main-font);
@@ -615,8 +665,6 @@ img {
   background-color: var(--dark-greyblue);
 }
 
-/* В этом месте если повесить на ссылку селектор и обращаться к ней через селектор конструкция не работает, т.к. класс .active перебивает обращение по селектору, только напрямую через тег <а> работает. По крайней мере у меня другого рабочего решения не получилось */
-
 .tabs-nav-item a {
   display: block;
   color: var(--basic-white);
@@ -639,3 +687,81 @@ img {
   color: var(--basic-greyblue);
   margin: 0;
 }
+
+/* Catalog Filters */
+
+.catalog-filters-title {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+  background-color: var(--bg-greywarm);
+}
+
+/* Catalog Sorting */
+
+.catalog-sorter {
+  background-color: var(--bg-greywarm);
+}
+
+.catalog-sorter-title {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.catalog-sort-link-item {
+  font-size: 13px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: var(--transparent-black);
+  border-bottom: 1px dotted var(--basic-red);
+}
+
+.catalog-sort-link-item:hover {
+  color: var(--basic-black);
+  border-bottom: 1px solid var(--basic-red);
+}
+
+.catalog-sort-link-item.current-item {
+  color: var(--basic-red);
+  border: none;
+}
+
+/* Catalog Content */
+
+.catalog-main-title {
+  font-family: var(--secondary-font);
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: var(--basic-greyblue);
+  background-color: var(--bg-greycool);
+}
+
+/* Catalog Pagination */
+
+.pagination-item {
+  font-size: 13px;
+  line-height: 18px;
+  color: var(--basic-black);
+  border: 1px solid var(--border-button);
+  border-radius: 2px;
+}
+
+.pagination-item:hover {  
+  border: 1px solid var(--basic-greylight);
+}
+
+.pagination-item:active {
+  border: 1px solid var(--basic-red);
+}
+
+.pagination-item.current-item {
+  color: var(--basic-white);
+  background-color: var(--basic-red);
+  border: 1px solid var(--basic-red);
+}
+
