--- a/css/style.css
+++ b/css/style.css
@@ -105,12 +105,14 @@ img {
 }
 
 .button {
+  font-family: var(--secondary-font);
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
   text-align: center;
   color: var(--basic-white);
   background-color: var(--basic-red);
+  padding: 11px 20px 9px;
 }
 
 .button:hover {
@@ -128,6 +130,7 @@ img {
   margin: 0;
   padding: 0;
   list-style: none;
+  margin-bottom: 20px;
 }
 
 .stylized-list-item {
@@ -195,16 +198,36 @@ img {
   background-color: var(--basic-red-active);
 }
 
+.header-search-form {  
+  position: relative;
+}
+
+.search-form-button {  
+  position: absolute;
+}
+
+.header-search-form input {
+  width: 100%;
+  padding: 10px 10px 8px 43px;
+  border: none;
+  line-height: inherit;
+  background-color: transparent;
+}
+
 .shop-navigation-wrap {
   display: flex; /* допилю в следующем задании */
 }
 
 .shop-menu-list {
-  display: grid;
+  display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
-  grid-template-columns: 1fr auto;
+  flex-grow: 1;
+}
+
+.shop-menu-item {
+  flex-grow: 1;
 }
 
 .shop-menu-item.filled {
@@ -216,7 +239,12 @@ img {
 }
 
 .shop-menu-link {
+  display: block;
   color: var(--basic-white);
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 8px;
+  padding-left: 25px;
 }
 
 .shop-menu-link:active {
@@ -225,6 +253,7 @@ img {
 
 .header-make-order {
   color: var(--basic-white);
+  padding: 10px 18px 8px;
   background-color: var(--basic-green);
 }
 
@@ -237,10 +266,15 @@ img {
   background-color: var(--basic-green);
 }
 
+.header-main-content {  
+  padding: 46px 0 60px;
+}
+
 .header-main-grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 20px;
+  margin-bottom: 43px;
 }
 
 .header-site-descript {
@@ -249,6 +283,15 @@ img {
   font-style: italic;
   color: var(--basic-red);
   font-weight: 400;
+  padding-left: 30px;
+  margin: 0;
+}
+
+.header-contact-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-right: 30px;
 }
 
 .header-phone {
@@ -257,27 +300,43 @@ img {
   font-weight: bold;
   color: var(--basic-red);
   border: 3px solid var(--basic-white);
+  width: 100%;
+  padding: 5px 0 4px;
+  padding-left: 70px;
 }
 
 .header-address {
   font-size: 14px;
   line-height: 24px;
   color: var(--basic-greyblue);
+  margin: 0;
 }
 
 .user-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
   font-size: 21px;
   line-height: 21px;
   list-style: none;
   margin: 0;
   padding: 0;
+  padding-left: 19px;
 }
 
 .user-menu-item {
   background-color: var(--basic-white);
+  flex-grow: 1;
+}
+
+.user-menu-item.login {
+  margin-right: 10px;
 }
 
 .user-menu-link {
+  display: block;
+  padding: 12px 0;
+  text-align: center;
   color: var(--basic-black);
 }
 
@@ -287,6 +346,10 @@ img {
 
 .user-menu-link:active {
   color: var(--basic-greylight);
+}
+
+.login-label {
+  padding-left: 25px;
 }
 
 .user-logged-block {
@@ -340,9 +403,13 @@ img {
   font-size: 18px;
   line-height: 24px;
   background-color: var(--basic-greyblue);
+  border-bottom: 5px solid var(--dark-greyblue);
 }
 
-.main-menu {  
+.main-menu { 
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -352,8 +419,10 @@ img {
   background-color: var(--dark-greyblue);
 }
 
-.main-menu-link { 
+.main-menu-link {
+  display: block;
   color: var(--basic-white);  
+  padding: 17px 28px 14px;
 }
 
 .main-menu-link:active {  
@@ -387,7 +456,8 @@ img {
   width: 220px;
   background-color: var(--basic-red);
   padding: 20px 41px;
-  border-bottom: 5px solid var(--basic-red-active);
+  margin-bottom: 22px;
+  border-bottom: 5px solid var(--basic-red-active);  
 }
 
 .footer-logo img {
@@ -403,10 +473,20 @@ img {
   color: var(--footer-text);
 }
 
-.footer-site-nav {  
+.footer-nav-wrap {
+  padding: 20px 0 57px;
+}
+
+.footer-site-nav { 
+  display: flex;
+  justify-content: flex-end;
   list-style: none;
+  padding: 17px 0;
   margin: 0;
-  padding: 0;
+}
+
+.footer-site-nav-item:not(:last-child) {
+  padding-right: 60px;
 }
 
 .footer-site-nav-link {
@@ -423,9 +503,15 @@ img {
 }
 
 .footer-product-nav {
+  display: flex;
+  justify-content: flex-end;
   list-style: none;
+  padding: 17px 0;
   margin: 0;
-  padding: 0;
+}
+
+.footer-product-nav-item:not(:last-child) {
+  padding-right: 60px;
 }
 
 .footer-product-nav-link {
@@ -442,9 +528,10 @@ img {
 }
 
 .footer-trim {
-  background-color: var(--dark-greyblue);
   font-size: 16px;
   color: var(--basic-white);
+  padding: 30px 0 26px;
+  background-color: var(--dark-greyblue);
 }
 
 .footer-trim-grid-container {
@@ -457,15 +544,8 @@ img {
   margin: 0;
 }
 
-.reply {
-  margin: 0;
-}
-
-.designed {
-  margin: 0;
-}
-
 .footer-socials {
+  display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -478,6 +558,19 @@ img {
 
 .footer-socials-item:hover .social-button-bg {
   color: var(--basic-red);
+}
+
+.footer-signature {
+  display: flex;    
+  justify-content: space-between;
+}
+
+.reply {
+  margin: 0;
+}
+
+.designed {
+  margin: 0;
 }
 
 .footer-trim-link {
@@ -499,8 +592,18 @@ img {
 ===========
 */
 
+
+.page-section.index-main {
+  padding: 59px 0 70px;
+}
+
 .page-section.grey-bg {
+  padding: 64px 0 43px;
   background-color: var(--bg-greycool);
+}
+
+.page-section.about {
+  padding: 70px 0;
 }
 
 .page-section-title {
@@ -510,6 +613,8 @@ img {
   font-weight: normal;
   text-transform: uppercase;
   color: var(--basic-black);
+  margin: 0;
+  margin-bottom: 25px;
 }
 
 .breadcrumbs {
@@ -525,6 +630,19 @@ img {
   color: var(--basic-black);
 }
 
+.text-content {
+  margin-bottom: 25px;
+}
+
+.text-content p {
+  margin: 0;
+  margin-bottom: 32px;
+}
+
+.text-content p:last-child {
+  margin-bottom: 0;
+}
+
 /* Index Promo Block */
 
 .promo-menu {
@@ -532,10 +650,17 @@ img {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto auto auto;
   gap: 20px;
+  margin-bottom: 59px;
 }
 
 .promo-menu-item {
   font-family: var(--secondary-font);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 21px 23px;
+  max-width: 300px;
 }
 
 .promo-menu-item-title {
@@ -543,6 +668,8 @@ img {
   line-height: 30px;
   font-weight: bold;
   color: var(--basic-white);
+  margin: 0;
+  margin-bottom: 13px;
 }
 
 .promo-menu-item-link {
@@ -551,6 +678,8 @@ img {
   text-align: center;
   text-transform: uppercase;
   color: var(--basic-white);
+  min-width: 135px;
+  padding: 11px 20px 9px;
   background-color: var(--transparent-white);
 }
 
@@ -608,6 +737,7 @@ img {
 }
 
 .promo-slider-text-wrap {
+  padding: 23px 24px 16px;
   background-color: var(--transparent-black);
 }
 
@@ -616,12 +746,19 @@ img {
   line-height: 36px;
   text-transform: uppercase;
   margin: 0;
+  margin-bottom: 6px;
 }
 
 .promo-slider-tagline {
   font-size: 18px;
   line-height: 24px;
   margin: 0;
+}
+
+.promo-slider-item .button {
+  position: absolute;
+  left: 24px;
+  bottom: 27px;
 }
 
 .promo-slider-nav {
@@ -633,14 +770,14 @@ img {
 
 .slider-button-prev {    
   position: absolute;
-  left: 0;
+  left: 24px;
   top: 50%;
   transform: translateY(-50%);
 }
 
 .slider-button-next {    
   position: absolute;
-  right: 0;
+  right: 24px;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -654,7 +791,15 @@ img {
 
 /* Index Catalog Section */
 
+.index-catalog-section:not(:last-child) {
+  margin-bottom: 70px;
+}
+
 .catalog-section-header {
+  display: flex;
+  align-items: flex-start;
+  padding: 25px 14px 26px 28px;
+  margin-bottom: 20px;
   background-color: var(--bg-greywarm);
 }
 
@@ -665,6 +810,14 @@ img {
   text-transform: uppercase;
   font-weight: normal;
   color: var(--basic-greyblue);
+  margin: 0;
+  padding: 5px 0 3px;
+  flex-grow: 1;
+}
+
+.catalog-section-header .button {
+  min-width: 192px;
+  flex-shrink: 0;
 }
 
 .index-catalog-list {
@@ -679,7 +832,10 @@ img {
 /* Catalog Card */
 
 .product-card {  
+  display: flex;
+  flex-direction: column;
   font-family: var(--main-font);
+  position: relative;
   border: 1px solid var(--border-product-card);
 }
 
@@ -687,13 +843,26 @@ img {
   box-shadow: 0px 4px 20px var(--shadow-product-card);
 }
 
-.product-card-buttons {  
+.product-card-buttons {
+  display: none;
   font-family: var(--secondary-font);
+  position: absolute;
+  width: 100%;
+  padding: 37px 20px 51px;
+  background-color: var(--basic-white);
+}
+
+.product-card:hover > .product-card-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card-button {
   display: block;
   font-size: 14px;
+  line-height: 18px;
+  min-width: 135px;
   text-transform: uppercase;
   text-align: center;
   border-radius: 2px;
@@ -701,6 +870,8 @@ img {
 
 .card-button.buy {
   color: var(--basic-white);
+  padding: 11px 0 9px;
+  margin-bottom: 10px;
   background-color: var(--basic-green);
   box-shadow: inset 0px -3px 0px var(--basic-green-shadow);
 }
@@ -715,6 +886,7 @@ img {
 
 .card-button.add-favorite {
   color: var(--basic-greyblue);
+  padding: 8px 0 6px;
   border: 3px solid var(--basic-green);
 }
 
@@ -726,37 +898,70 @@ img {
   opacity: .5;
 }
 
+.product-card-previews {
+  display: flex;
+  width: 218px;
+  height: 174px;
+}
+
+.product-card-previews a {
+  display: flex;
+  flex-basis: 100%;
+}
+
 .product-card-thumb {
   display: block;
+  margin: auto;
+}
+
+.product-card-info {
+  display: flex;
+  padding: 4px 20px 20px;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .product-card-title {
   font-weight: bold;
   font-size: 18px;
-  line-height: 20px;
+  line-height: 21px;
   text-align: center;
   color: var(--basic-black);
+  margin: 0;
+  margin-bottom: 7px;
 }
 
 .product-card-price {
+  display: flex;
   font-size: 17px;
   line-height: 18px;
   font-weight: bold;
   text-align: center;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  flex-grow: 1;
 }  
 
 .price-last {
   text-decoration: line-through;
   color: var(--extra-greylight);
+  margin-bottom: 13px;
 }
 
 .price-now {
   color: var(--basic-white);
+  padding: 10px 23px 10px 31px;
+  margin-right: 8px;
+  border-radius: 4px 0 0 4px;
   background-color: var(--basic-red);
 }
 
-.brand-card {  
+.brand-card { 
+  display: flex; 
   font-family: var(--main-font);
+  min-height: 145px;
   border: 1px solid var(--border-product-card);
 }
 
@@ -768,8 +973,14 @@ img {
   opacity: .5;
 }
 
+.brand-card a {
+  display: flex;
+  flex-basis: 100%;
+}
+
 .brand-card-thumb {
   display: block;
+  margin: auto;
 }
 
 /* Index Services Slider */
@@ -791,10 +1002,13 @@ img {
 }
 
 .tabs-nav-item {
+  border-top: 1px solid var(--icon-hover);
+  border-bottom: 1px solid var(--dark-greyblue);
   background-color: var(--basic-greyblue);
 }
 
 .tabs-nav-item.active {
+  border-color: transparent;
   background-color: var(--basic-white);
 }
 
@@ -805,6 +1019,7 @@ img {
 .tabs-nav-item a {
   display: block;
   color: var(--basic-white);
+  padding: 13px 22px 17px;
 }
 
 .tabs-nav-item.active a {
@@ -815,6 +1030,10 @@ img {
   color: var(--basic-white);
 }
 
+.tabs-content {
+  padding-left: 80px;
+}
+
 .tab-item-title {
   font-family: var(--secondary-font);
   font-weight: normal;
@@ -823,14 +1042,46 @@ img {
   text-transform: uppercase;
   color: var(--basic-greyblue);
   margin: 0;
+  margin-bottom: 30px;
+}
+
+.tabs-content p {
+  margin: 0;
 }
 
 /* About Section */
+
+.page-section.about p {
+  margin: 0;
+  margin-bottom: 32px;
+}
 
 .index-about-grid-container {
   display: grid;
   grid-template-columns: 1fr 300px;
   gap: 20px;
+}
+
+.index-about-company {
+  padding-right: 160px;
+}
+
+.index-about-company p + .stylized-list {
+  margin-top: -32px;
+}
+
+.button.about {
+  display: block;
+  width: 220px;
+}
+
+.index-map-link img {
+  display: block;
+  margin-bottom: 25px;
+}
+
+.button.contact-us {
+  display: block;
 }
 
 /* Catalog Page */
