--- a/css/style.css
+++ b/css/style.css
@@ -199,19 +199,19 @@ img {
 }
 
 .header-search-form {  
-  position: relative;
+  display: flex;
 }
 
-.search-form-button {  
-  position: absolute;
-}
-
-.header-search-form input {
+.header-search-field {
   width: 100%;
-  padding: 10px 10px 8px 43px;
+  padding: 10px 10px 8px;
   border: none;
   line-height: inherit;
   background-color: transparent;
+}
+
+.search-form-button {  
+  order: -1;
 }
 
 .shop-navigation-wrap {
@@ -602,10 +602,6 @@ img {
   background-color: var(--bg-greycool);
 }
 
-.page-section.about {
-  padding: 70px 0;
-}
-
 .page-section-title {
   font-family: var(--secondary-font);
   font-size: 30px;
@@ -658,7 +654,7 @@ img {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 21px 23px;
   max-width: 300px;
 }
@@ -680,6 +676,7 @@ img {
   color: var(--basic-white);
   min-width: 135px;
   padding: 11px 20px 9px;
+  margin-top: auto;
   background-color: var(--transparent-white);
 }
 
@@ -755,7 +752,7 @@ img {
   margin: 0;
 }
 
-.promo-slider-item .button {
+.promo-slider-item-button {
   position: absolute;
   left: 24px;
   bottom: 27px;
@@ -844,18 +841,19 @@ img {
 }
 
 .product-card-buttons {
-  display: none;
-  font-family: var(--secondary-font);
+  display: flex;
   position: absolute;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   padding: 37px 20px 51px;
+  font-family: var(--secondary-font);
   background-color: var(--basic-white);
+  z-index: -1;
 }
 
 .product-card:hover > .product-card-buttons {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  z-index: 1;
 }
 
 .card-button {
@@ -900,11 +898,12 @@ img {
 
 .product-card-previews {
   display: flex;
-  width: 218px;
+  width: 100%;
   height: 174px;
+  background-color: var(--basic-white);
 }
 
-.product-card-previews a {
+.product-card-preview-link {
   display: flex;
   flex-basis: 100%;
 }
@@ -973,7 +972,7 @@ img {
   opacity: .5;
 }
 
-.brand-card a {
+.brand-card-link {
   display: flex;
   flex-basis: 100%;
 }
@@ -1051,9 +1050,17 @@ img {
 
 /* About Section */
 
-.page-section.about p {
+.index-about {
+  padding: 70px 0;
+}
+
+.index-about p {
   margin: 0;
   margin-bottom: 32px;
+}
+
+.index-about p:last-of-type {
+  margin-bottom: 0;
 }
 
 .index-about-grid-container {
@@ -1066,11 +1073,7 @@ img {
   padding-right: 160px;
 }
 
-.index-about-company p + .stylized-list {
-  margin-top: -32px;
-}
-
-.button.about {
+.index-about-button {
   display: block;
   width: 220px;
 }
