--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ img {
   font-family: var(--secondary-font);
   font-size: 18px;
   line-height: 24px;
-  margin: 0;
+  margin: 2px 0 20px;
   padding: 0;
   list-style: none;
   margin-bottom: 20px;
@@ -135,7 +135,12 @@ img {
 
 .stylized-list-item {
   position: relative;
-  padding-left: 35px;
+  padding-left: 37px;
+  margin-bottom: 12px;
+}
+
+.stylized-list-item:last-child {
+  margin-bottom: 0;
 }
 
 .stylized-list-item::before {
@@ -147,6 +152,27 @@ img {
   top: 50%;
   transform: translateY(-50%);
   background-color: var(--basic-red);
+}
+
+.new {
+  position: relative;
+  overflow: hidden;
+}
+
+.new::before {
+  position: absolute;
+  content: 'New';
+  font-family: var(--secondary-font);
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: var(--basic-white);
+  padding: 8px 38px 4px;
+  background-color: var(--basic-red);
+  transform: rotate(45deg);
+  right: -27px;
+  top: 8px;
+  z-index: 2;
 }
 
 /* 
@@ -198,21 +224,68 @@ img {
   background-color: var(--basic-red-active);
 }
 
+/* Header Search */
+
 .header-search-form {  
   display: flex;
 }
 
 .header-search-field {
+  flex-grow: 1;
   width: 100%;
-  padding: 10px 10px 8px;
+  padding: 10px 8px 8px 4px;
   border: none;
+  border-radius: 0;
   line-height: inherit;
+  color: var(--basic-black);
   background-color: transparent;
+  -webkit-appearance: none;
+}
+
+.header-search-field::-webkit-search-cancel-button,
+.header-search-field::-webkit-search-results-button { 
+    -webkit-appearance: none; 
+}
+
+.header-search-field::placeholder {
+    color: var(--basic-white);
+}
+
+.header-search-field:focus,
+.header-search-form:focus-within .header-search-field  {
+    background-color: var(--basic-white);
+    outline: none;
+}
+
+.header-search-field:focus::placeholder {
+    color: var(--transparent-black);
 }
 
 .search-form-button {  
   order: -1;
+  background-color: transparent;
+  border: none;
+  border-radius: 0;
+  padding: 12px 4px 13px 17px;
+  color: var(--basic-white);
+  opacity: .3;
 }
+
+.header-search-form:hover .search-form-button {    
+  opacity: 1;
+}
+
+.header-search-form:focus-within .search-form-button {
+  color: var(--basic-red);
+  background-color: var(--basic-white);
+  opacity: 1;
+}
+
+.search-form-icon {
+  display: block;
+}
+
+/* Shop Navigation */
 
 .shop-navigation-wrap {
   display: flex; /* допилю в следующем задании */
@@ -240,6 +313,7 @@ img {
 
 .shop-menu-link {
   display: block;
+  position: relative;
   color: var(--basic-white);
   text-align: center;
   padding-top: 10px;
@@ -247,8 +321,32 @@ img {
   padding-left: 25px;
 }
 
+.shop-menu-link::before {
+  position: absolute;
+  content: '';
+  left: 28px;
+  top: 13px;
+  width: 15px;
+  height: 16px;
+  background-position: right top;
+  background-repeat: no-repeat;
+  opacity: .3;
+}
+
+.shop-menu-link:hover::before {
+  opacity: 1;
+}
+
 .shop-menu-link:active {
   opacity: .5;
+}
+
+.shop-menu-link.cart::before {
+  background-image: url(../img/icons/icon-cart.svg);
+}
+
+.shop-menu-link.favorites::before {
+  background-image: url(../img/icons/icon-bookmark.svg);
 }
 
 .header-make-order {
@@ -267,14 +365,14 @@ img {
 }
 
 .header-main-content {  
-  padding: 46px 0 60px;
+  padding: 45px 0 60px;
 }
 
 .header-main-grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 20px;
-  margin-bottom: 43px;
+  margin-bottom: 40px;
 }
 
 .header-site-descript {
@@ -295,6 +393,7 @@ img {
 }
 
 .header-phone {
+  position: relative;
   font-size: 21px;
   line-height: 30px;
   font-weight: bold;
@@ -303,6 +402,19 @@ img {
   width: 100%;
   padding: 5px 0 4px;
   padding-left: 70px;
+  margin-bottom: 4px;
+}
+
+.header-phone::before {
+  position: absolute;
+  content: '';
+  left: 37px;
+  top: 10px;
+  width: 19px;
+  height: 19px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(../img/icons/icon-phone.svg);
 }
 
 .header-address {
@@ -335,7 +447,7 @@ img {
 
 .user-menu-link {
   display: block;
-  padding: 12px 0;
+  padding: 13px 0 11px;
   text-align: center;
   color: var(--basic-black);
 }
@@ -348,8 +460,28 @@ img {
   color: var(--basic-greylight);
 }
 
+.login-link {
+  position: relative;
+}
+
+.login-icon {
+  position: absolute;
+  left: 18px;
+  top: 15px;
+  color: var(--basic-greylight);
+  flex-shrink: 0;
+}
+
+.login-link:hover .login-icon {
+  color: var(--icon-hover);
+}
+
+.login-link:active .login-icon {
+  color: var(--basic-greylight);
+}
+
 .login-label {
-  padding-left: 25px;
+  padding-left: 20px;
 }
 
 .user-logged-block {
@@ -469,7 +601,7 @@ img {
   width: 220px;
   background-color: var(--basic-red);
   padding: 20px 41px;
-  margin-bottom: 22px;
+  margin-bottom: 23px;
   border-bottom: 5px solid var(--basic-red-active);  
 }
 
@@ -499,7 +631,7 @@ img {
 }
 
 .footer-site-nav-item:not(:last-child) {
-  padding-right: 60px;
+  padding-right: 59px;
 }
 
 .footer-site-nav-link {
@@ -524,7 +656,7 @@ img {
 }
 
 .footer-product-nav-item:not(:last-child) {
-  padding-right: 60px;
+  padding-right: 59px;
 }
 
 .footer-product-nav-link {
@@ -542,8 +674,9 @@ img {
 
 .footer-trim {
   font-size: 16px;
+  line-height: 18px;
   color: var(--basic-white);
-  padding: 30px 0 26px;
+  padding: 36px 0 23px;
   background-color: var(--dark-greyblue);
 }
 
@@ -562,6 +695,7 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
+  padding-right: 28px;
   justify-self: center;
 }
 
@@ -576,6 +710,7 @@ img {
 .footer-signature {
   display: flex;    
   justify-content: space-between;
+  padding-right: 14px;
 }
 
 .reply {
@@ -614,7 +749,7 @@ img {
 }
 
 .page-section.grey-bg {
-  padding: 64px 0 43px;
+  padding: 65px 0 53px;
   background-color: var(--bg-greycool);
 }
 
@@ -691,6 +826,7 @@ img {
   justify-content: flex-start;
   padding: 21px 23px;
   max-width: 300px;
+  background-repeat: no-repeat;
 }
 
 .promo-menu-item-title {
@@ -708,8 +844,8 @@ img {
   text-align: center;
   text-transform: uppercase;
   color: var(--basic-white);
-  min-width: 135px;
-  padding: 11px 20px 9px;
+  min-width: 135px;  
+  padding: 10px 20px;
   margin-top: auto;
   background-color: var(--transparent-white);
 }
@@ -722,20 +858,34 @@ img {
   background-color: var(--transparent-extra-greylight);
 }
 
-.promo-menu-item.yellow {
+.promo-menu-item.materials {    
   background-color: var(--extra-yellow);
+  background-position: 213px 31px;
+  background-image: url(../img/icons/icon-materials.svg);
 }
 
-.promo-menu-item.blue {
+.promo-menu-item.tools {    
   background-color: var(--extra-blue);
+  background-position: 194px 34px;
+  background-image: url(../img/icons/icon-tools.svg);
 }
 
-.promo-menu-item.lilac {
-  background-color: var(--extra-lilac);
+.promo-menu-item.technics {   
+  background-color: var(--extra-lilac); 
+  background-position: 191px center;
+  background-image: url(../img/icons/icon-technics.svg);  
 }
 
-.promo-menu-item.green {
+.promo-menu-item.sale {    
   background-color: var(--extra-greenlight);
+  background-position: 196px 26px;
+  background-image: url(../img/icons/icon-sale.svg);  
+}
+
+.promo-menu-item.delivery {    
+  background-color: var(--extra-yellow);  
+  background-position: 191px 32px;
+  background-image: url(../img/icons/icon-delivery.svg);
 }
 
 .promo-slider {
@@ -790,34 +940,64 @@ img {
   position: absolute;
   left: 24px;
   bottom: 27px;
+  width: 192px;
 }
 
 .promo-slider-nav {
   position: absolute;
   left: 0;
   right: 0;
-  top: 50%;
+  top: 46%;
 }
 
-.slider-button-prev {    
-  position: absolute;
-  left: 24px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
+.slider-button-prev,
 .slider-button-next {    
   position: absolute;
+  top: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  color: var(--basic-white);
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.slider-button-prev {
+  left: 24px;
+}
+
+.slider-button-next {
   right: 24px;
-  top: 50%;
-  transform: translateY(-50%);
 }
 
 .promo-slider-pagination {
   position: absolute;
+  display: flex;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 0;
+  bottom: 30px;
+  justify-content: center;
+}
+
+.promo-slider-pagination-bullet {
+  display: block;
+  padding: 0;
+  margin: 5px;
+  width: 10px;
+  height: 10px;
+  border: 2px solid var(--basic-white);
+  border-radius: 50%;
+  background-color: var(--basic-white);
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.promo-slider-pagination-bullet:hover {
+  background-color: var(--basic-red);
+}
+
+.promo-slider-pagination-bullet.active {
+  background-color: var(--basic-red);
 }
 
 /* Index Catalog Section */
@@ -984,11 +1164,24 @@ img {
 }
 
 .price-now {
+  position: relative;
   color: var(--basic-white);
   padding: 10px 23px 10px 31px;
   margin-right: 8px;
   border-radius: 4px 0 0 4px;
   background-color: var(--basic-red);
+}
+
+.price-now::before {
+  position: absolute;
+  content: '';
+  top: 0px;
+  right: 0;
+  width: 27px;
+  height: 27px;
+  background-color: var(--basic-red);
+  transform: rotate(-45deg);
+  transform-origin: right top;
 }
 
 .brand-card { 
@@ -1030,7 +1223,7 @@ img {
   font-size: 21px;
   line-height: 30px;
   margin: 0;
-  padding: 0;
+  padding: 45px 0;
   list-style: none;
 }
 
@@ -1064,8 +1257,42 @@ img {
 }
 
 .tabs-content {
+  position: relative; 
   padding-left: 80px;
 }
+
+.tabs-content::before {
+  position: absolute;
+  content: '';
+  top: 50%;
+  left: 0;
+  width: 10px;
+  height: 280px;
+  transform: translateY(-50%) translateX(-100%);
+  background-image: url(../img/content/slider-shadow.png);
+}
+
+.tab-item { 
+  padding: 43px 0 50px;
+  background-repeat: no-repeat;
+}
+
+.tab-item.delivery { 
+  background-image: url(../img/content/bg-delivery.png); 
+  background-position: right 64px;
+}
+
+.tab-item.warranty { 
+  background-image: url(../img/content/bg-warranty.png); 
+  background-position: right 64px;
+}
+
+.tab-item.credit { 
+  background-image: url(../img/content/bg-credit.png); 
+  background-position: right 64px;
+}
+
+
 
 .tab-item-title {
   font-family: var(--secondary-font);
@@ -1090,7 +1317,7 @@ img {
 
 .index-about p {
   margin: 0;
-  margin-top: 32px;
+  margin-top: 25px;
 }
 
 .index-about p:first-of-type {
