Небольшие поправочки добавил

--- a/css/style.css
+++ b/css/style.css
@@ -951,6 +951,10 @@ img {
   justify-self: center;
 }
 
+.social-button-icon {
+  display: block;
+}
+
 .social-button-bg {
   color: var(--social-button-bg);
 }
